src/objects/ddrive__Event__c.object
<CustomObject>
    <fields>
        <fullName>ddrive__Active__c</fullName>
        <defaultValue>&apos;true&apos;</defaultValue>
        <label>Active</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DD Instance</label>
        <referenceTo>ddrive__Configuration__c</referenceTo>
        <relationshipLabel>DD Events</relationshipLabel>
        <relationshipName>DD_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ddrive__Contact_Email__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ddrive__Contact_Person__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Contact Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Contact_Phone_Ext__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Contact Phone Ext</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Contact_Phone__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ddrive__Donation_Cut_Off_Date__c</fullName>
        <label>Donation Cut Off Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Event_Time_Zone__c</fullName>
        <label>Event Time Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Num_Donors__c</fullName>
        <label>Donors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Num_Event_Donors__c</fullName>
        <label>Event Donors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Num_Participant_Donors__c</fullName>
        <label>Participant Donors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Num_Participants__c</fullName>
        <label>Participants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Num_Team_Donors__c</fullName>
        <label>Team Donors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Num_Teams__c</fullName>
        <label>Teams</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Previous_Event_ID__c</fullName>
        <label>Previous Event ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Previous_Event_Name__c</fullName>
        <label>Previous Event Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Sum_Donations__c</fullName>
        <label>Total Raised</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_URL_Alias__c</fullName>
        <label>Event URL Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ddrive__Fiscal_Year__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Fiscal Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Fundraising_Goal__c</fullName>
        <label>Fundraising Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__Is_Published__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Part of DonorDrive integration</description>
        <label>Is Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Max_Participants__c</fullName>
        <label>Max Participants</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Max_Teams__c</fullName>
        <label>Max Teams</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Organization_Code__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Organization Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Program_Code__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Program Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Registration_Cut_Off_Date__c</fullName>
        <label>Registration Cut Off Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddrive__Site_Code__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Site Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddrive__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Venue_Address__c</fullName>
        <label>Venue Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Venue__c</fullName>
        <label>Venue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DD Event</label>
    <listViews>
        <fullName>ddrive__All</fullName>
        <columns>NAME</columns>
        <columns>ddrive__External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DD Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>